Fixed alignment as required by reviewer

--- a/scss/home-and-global/_featured.scss
+++ b/scss/home-and-global/_featured.scss
@@ -7,9 +7,9 @@
   background: url('../img/featured-bg.jpg');
   background-color: $primary_dark;
   background-blend-mode: soft-light;
-
+  
   @include responsive-bg;
-
+  
   &-speakers {
     font-size: 2rem;
     color: set-text-color($primary_dark);
@@ -24,26 +24,26 @@
   margin: 4rem 10%;
   gap: 3rem;
   align-items: center;
-
+  
   @include for-phone-only {
     width: 90%;
     grid-template-columns: auto;
     margin: 2rem 5%;
     gap: 3rem;
   }
-
+  
   @include for-tablet {
     grid-template-columns: auto;
     width: 80%;
   }
-
+  
   &-item {
     color: set-text-color($primary_dark);
     width: 100%;
     display: flex;
     flex-direction: row;
-    justify-content: center;
-    align-items: center;
+    justify-content: flex-start;
+    align-items: flex-start;
 
     @include for-mini-device {
       font-size: 0.8rem;
@@ -53,7 +53,7 @@
       width: 20%;
       max-width: 100%;
       height: auto;
-      margin: 12px;
+      margin: 0 12px;
 
       @include for-phone-only {
         width: 30%;
